Spacing and background image fixes

--- a/css/client-page.css
+++ b/css/client-page.css
@@ -21,7 +21,7 @@
 
 .header-logo {
   width: 12%;
-  margin: 0 auto;
+  margin: 12px auto 0;
 }
 .header-logo img {
   width:100%;
@@ -52,13 +52,15 @@ body{
 }
 
 .framing-container {
-  width: 100%;
-  margin: 0 auto;
-  margin-top: -4%;
-  padding: 8%;
-  background: url("../assets/header-img.png");
+  width: calc(100% + 100px);
+  margin-left: -50px;
+  margin-top: -7.5%;
+  padding: 9% 14% 16%;
+  margin-bottom: -4%;
+  background: url("../assets/header-img-fixed.png");
   background-size:contain;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 .top-page{
@@ -140,7 +142,7 @@ p .bottomp {
 
 .can  {
   display: inline-block;
-  padding: 100px 5vw;
+  padding: 0 5vw 64px;
   width: 25vw;
   position:relative;
 }
@@ -156,7 +158,7 @@ p .bottomp {
   padding-bottom: 10px;
   padding-left: 10px;
   padding-right: 10px;
-  display: flex;
+  /* display: flex; */
   align-items: center;
   justify-content: center;
 }
@@ -166,7 +168,7 @@ p .bottomp {
   display: block;
   position: absolute;
   left: 20%;
-  bottom: 30px;
+  bottom: 120px;
   width: 60%;
   margin: 0 auto;
   height: 10px;
@@ -192,12 +194,12 @@ p .bottomp {
 
 .can button {
 
-  margin: 0;
-  position: absolute;
-  left: 50%;
+  margin: 40px auto 0;
+  /* position: absolute; */
+  /* left: 50%; */
   bottom: 0px;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  /* -ms-transform: translate(-50%, -50%); */
+  /* transform: translate(-50%, -50%); */
   font-family: 'Open Sans', sans-serif;
   border-radius: 26px;
   background-color: #FFD180;
@@ -207,7 +209,7 @@ p .bottomp {
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: block;
   font-size: 14px;
   font-weight: bold;
   transition-duration: 0.4s;
@@ -229,7 +231,11 @@ p .bottomp {
   justify-content: center;
   /* margin-top: 10vw; */
   /* margin-bottom: 15vw; */
-  margin-top:4%;
+  margin-top:180px;
+}
+
+.middle-section {
+  margin-top:80px;
 }
 
 .footer img {
